--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function gtag_report_conversion(url) {
 <script>
 function g2() {
    gtag_report_conversion();
-   window.open('https://wa.me/your-number', '_blank');
+   window.open('https://wa.me/6281376726787', '_blank');
         }
 </script>
     <meta charset="UTF-8">
