--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'AW-17361362445');
 </script>
 
-   <!-- Event snippet for 注册 conversion page
+ <!-- Event snippet for 注册 (2) conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
 function gtag_report_conversion(url) {
@@ -21,7 +21,7 @@ function gtag_report_conversion(url) {
     }
   };
   gtag('event', 'conversion', {
-      'send_to': 'AW-17361242717/Hp7jCN2I4vQaEN2UvtZA',
+      'send_to': 'AW-17361362445/id6xCMixofUaEI28xdZA',
       'value': 1.0,
       'currency': 'USD',
       'event_callback': callback
@@ -29,6 +29,8 @@ function gtag_report_conversion(url) {
   return false;
 }
 </script>
+
+ 
 <script>
 function g2() {
    gtag_report_conversion();
