--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
   gtag('config', 'AW-17381932172');
 </script>
-
- <!-- Event snippet for 注册 (2) conversion page
+<!-- Event snippet for 注册 conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
 function gtag_report_conversion(url) {
@@ -25,7 +24,7 @@ function gtag_report_conversion(url) {
     }
   };
   gtag('event', 'conversion', {
-      'send_to': 'AW-17361362445/id6xCMixofUaEI28xdZA',
+      'send_to': 'AW-17381932172/sYxHCKmivPYaEIz5rOBA',
       'value': 1.0,
       'currency': 'USD',
       'event_callback': callback
